--- a/app/src/main/res/drawable/shapeorder.xml
+++ b/app/src/main/res/drawable/shapeorder.xml
@@ -2,10 +2,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
     <corners android:radius="20dp"/>
-    <stroke
-        android:color="@color/black"
-        android:dashWidth="15px"
-        android:dashGap="10px"
-        android:width="0.2dp"/>
-
+    <solid android:color="@color/new_green"/>
 </shape>
