--- a/app/src/main/res/layout/activity_select_type.xml
+++ b/app/src/main/res/layout/activity_select_type.xml
@@ -8,50 +8,8 @@
     tools:context=".SelectTypeActivity">
 
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:id="@+id/rl_spin1"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="100dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        android:background="@drawable/shape">
 
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Select City"
-            android:textSize="17dp"
-            android:layout_centerInParent="true"
-            android:textColor="@color/purple_700"/>
-
-        <Spinner
-            android:id="@+id/cityspin"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            />
-
-    </RelativeLayout>
-
-
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/btn_next"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="40dp"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_marginStart="20dp"
-        android:text="Next"
-        android:textAllCaps="false"
-        android:layout_marginEnd="20dp"
-        app:cornerRadius="35dp"/>
-
-
-
-
-  <!--  <LinearLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="70dp"
         android:background="@drawable/fullgradient"
@@ -88,6 +46,6 @@
             android:layout_gravity="center"
             android:layout_weight="1"
             android:textColor="@color/white"/>
-    </LinearLayout>-->
+    </LinearLayout>
 
 </RelativeLayout>
