--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -12,7 +12,7 @@
         android:layout_marginRight="10dp"
         android:layout_alignParentRight="true"
         android:alpha="0.50"/>-->
-
+ //pawan yadav
 
 
     <ScrollView
@@ -313,7 +313,6 @@
                 android:layout_height="wrap_content"
                 android:textSize="12dp"
                 android:textStyle="bold"
-                android:layout_margin="10dp"
                 android:hint="Date Of Birth"
                 android:gravity="center_vertical"
                 android:paddingLeft="10dp"
@@ -338,11 +337,11 @@
 
                 <ImageView
                     android:id="@+id/iv_cal"
-                    android:layout_width="40dp"
-                    android:layout_height="match_parent"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
                     android:layout_alignParentRight="true"
-                    android:layout_gravity="end"
-                    android:padding="14dp"
+                    android:layout_centerVertical="true"
+                    android:layout_marginEnd="10dp"
                     android:src="@drawable/caldate" />
 
             </RelativeLayout>
